<resources>
    <string name="app_name">Autokartz</string>
    <string name="autokartz">AutoKartz</string>
    <string name="brand">Brand</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="not_a_member_yet_create_an_account">Not a Member Yet ? Create an Account</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="car_chassis_number">Car Chassis Number</string>
    <string name="category">Category</string>
    <string name="submit">Submit</string>
    <string name="enter_car_chassis_number">Enter Car Chassis Number</string>

    <string-array name="CAR_BRAND">
        <item>Select Car Brand</item>
        <item>Audi</item>
        <item>Bajaj</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Daewoo</item>
        <item>Datsun</item>
        <item>Fiat</item>
        <item>Force</item>
        <item>Ford</item>
        <item>Hero Motocorp</item>
        <item>Hindustan Motors</item>
        <item>Honda</item>
        <item>Honda Two Wheelers</item>
        <item>Hyundai</item>
        <item>Isuju</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Mahindra</item>
        <item>Maruti</item>
        <item>Mercedes Benz</item>
        <item>Mini</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Porsche</item>
        <item>Premier</item>
        <item>Range Rover</item>
        <item>Renault</item>
        <item>Royal Enfield</item>
        <item>Skoda</item>
        <item>Suzuki</item>
        <item>Tata</item>
        <item>Toyato</item>
        <item>TVS</item>
        <item>Universal</item>
        <item>Vespa</item>
        <item>Volkswagen</item>
        <item>Yahama</item>
    </string-array>

    <string-array name="CAR_MODEL">
        <item>Select Car Model</item>
        <item>A3</item>
        <item>A3 Cabriolet</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>A8</item>
    </string-array>

    <string-array name="CAR_YEAR">
        <item>Select Year</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

    <string-array name="CAR_CATEGORY">
        <item>Select Category</item>
        <item>Accessories</item>
        <item>Music Systems</item>
        <item>Engine Parts</item>
        <item>Transmissions</item>
        <item>Suspension Parts</item>
        <item>Electtricals and lightening</item>
        <item>Auto Body Parts</item>
        <item>Brake Parts</item>
        <item>Filters</item>
        <item>Fluids and Lubricants</item>
        <item>Miscellaneous Auto Parts</item>
        <item>2011</item>
        <item>Tool Kit</item>
    </string-array>

    <string-array name="DRAWER_ITEMS">
        <item>Home</item>
        <item>Enquire Form</item>
        <item>Transaction History</item>
        <item>Orders</item>
        <item>My Account</item>
        <item>Company URL</item>
    </string-array>

    <string name="title_activity_main_dashboard">MainDashboardActivity</string>
    <string name="home">Home</string>
    <string name="enquire_form">Enquire Form</string>
    <string name="transaction_history">Transaction History</string>
    <string name="orders">Orders</string>
    <string name="my_account">My Account</string>
    <string name="company_url">Company URL</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">CloseDrawer</string>
</resources>
